--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="col-md-12">
           <div>
             <span class="project-title">
-              <a href="https://globalgamejam.org/2020/games/jamjams-bizarre-adventure-2"
+              <a href="https://github.com/andrew-martin1/Dimensional-Chess-Java"
                 class="project-title link-light">
                 Dimensional Chess
               </a>
@@ -306,7 +306,7 @@
         <div class="col-md-12">
           <div>
             <span class="project-title">
-              <a href="https://globalgamejam.org/2020/games/jamjams-bizarre-adventure-2"
+              <a href="https://github.com/andrew-martin1/QDS_Hackathon_2020"
                 class="project-title link-light">
                 Equal Load Distribution Application
               </a>
@@ -492,7 +492,8 @@
         <div class="col-md-12">
           <div>
             <span class="project-title">
-              <a href="https://andrew-martin1.github.io/recipeProject/" class="project-title link-light">
+              <a href="https://andrew-martin1.github.io/recipeProject/" 
+              class="project-title link-light">
                 Feelin' Vegan
               </a>
             </span>
