Fix header redirection

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a class="nav-link js-scroll" href="#work" onclick="closeModal()">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#contact" onclick="closeModal()">Contact</a>
+            <a class="nav-link js-scroll" href="#contact-section" onclick="closeModal()">Contact</a>
           </li>
         </ul>
       </div>
