--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   says "backend"</p>-->
                 <div class="row">
                   <div class="col-sm-4">
-                    <h4 class="text-center title-s">Backend:</h4>
+                    <h4 class="title-s">Backend:</h4>
                     <p>
                       <ul class="skills-list">
                         <li>Java</li>
@@ -123,7 +123,7 @@
                     </p>
                   </div>
                   <div class="col-sm-4">
-                    <h4 class="text-center title-s">Frontend:</h4>
+                    <h4 class="title-s">Frontend:</h4>
                     <p>
                       <ul class="skills-list">
                         <li>HTML</li>
@@ -137,7 +137,7 @@
                     </p>
                   </div>
                   <div class="col-sm-4">
-                    <h4 class="text-center title-s">Tools:</h4>
+                    <h4 class="title-s">Tools:</h4>
                     <p>
                       <ul class="skills-list">
                         <li>Git</li>
