Change bio message to reflect change in employement

--- a/index.html
+++ b/index.html
@@ -592,12 +592,17 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
+                      I am currently employed at Reva Solutions as a software developer for my 8 month co-op. I am very greatful to be given this opportunity on behalf of Reva and BCIT's co-op program.
+                      <br /><br />
+                      If you have any feedback for my projects, please send them to my email below. I am always looking to improve on them.
+                      <!--
                       I am currently taking courses at BCIT, and I am looking for an internship beginning May 2020. If you would like me on your
                       team,
                       please contact me using the contact information below.
                       <br /><br />
                       In addition, please send me any feedback you have on my projects. I am always looking to improve
                       them.
+                      -->
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-email"></span> andrew.martin455@gmail.com</li>
